Завершение работы над функционалом